--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "node ./server.js",
     "start": "cross-env NODE_ENV=production node ./server.js",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "db:migrations": "drizzle-kit generate --dialect=sqlite --out=./app/drizzle/migrations --schema=./app/drizzle/schema.server.ts",
     "typecheck": "tsc"
   },
   "dependencies": {
@@ -15,6 +16,8 @@
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
+    "better-sqlite3": "^10.0.0",
+    "drizzle-orm": "^0.30.10",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,10 +27,12 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.9.2",
+    "@types/better-sqlite3": "^7.6.10",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
+    "drizzle-kit": "^0.21.4",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
