--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for ti4-lab-restless-fog-6803 on 2024-05-23T21:00:03-05:00
+# fly.toml app configuration file generated for ti4-lab on 2024-05-23T22:08:50-05:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'ti4-lab-restless-fog-6803'
+app = 'ti4-lab'
 primary_region = 'dfw'
 
 [build]
