--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@mantine/core": "^7.9.1",
-    "@mantine/hooks": "^7.9.1",
+    "@mantine/core": "^7.10.1",
+    "@mantine/hooks": "^7.10.1",
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-loading-indicators": "^0.2.3",
     "react-transition-group": "^4.4.5",
+    "remix-utils": "^7.6.0",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "uuid": "^9.0.1",
