--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx ./server.ts",
+    "discord:deploy": "tsx ./app/discord/deployCommands.ts",
     "build": "remix vite:build",
     "start": "cross-env NODE_ENV=production node ./server.mjs",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
