server init changes

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "tsx ./server.ts",
     "discord:deploy": "tsx ./app/discord/deployCommands.ts",
     "build": "remix vite:build",
-    "start": "cross-env NODE_ENV=production node ./server.mjs",
+    "start": "cross-env NODE_ENV=production tsx ./server.ts",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "db:migrations": "drizzle-kit generate --dialect=sqlite --out=./app/drizzle/migrations --schema=./app/drizzle/schema.server.ts",
     "typecheck": "tsc"
@@ -22,6 +22,7 @@
     "better-sqlite3": "^10.0.0",
     "cross-env": "^7.0.3",
     "discord.js": "^14.15.3",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.10",
     "isbot": "^4.1.0",
     "puppeteer": "^22.10.0",
@@ -32,6 +33,7 @@
     "remix-utils": "^7.6.0",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
+    "tsx": "^4.12.0",
     "uuid": "^9.0.1",
     "zustand": "^4.5.2"
   },
@@ -57,7 +59,6 @@
     "postcss-preset-mantine": "^1.15.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.2.5",
-    "tsx": "^4.12.0",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.2.1"
