--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@flydotio/dockerfile": "^0.5.7",
     "@remix-run/dev": "^2.9.2",
     "@types/better-sqlite3": "^7.6.10",
+    "@types/express": "^4.17.21",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/react-transition-group": "^4.4.10",
