--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.10",
+    "immer": "^10.1.1",
     "isbot": "^4.1.0",
     "puppeteer": "^22.10.0",
     "react": "^18.2.0",
