--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "drizzle-orm": "^0.30.10",
     "immer": "^10.1.1",
     "isbot": "^4.1.0",
+    "jotai": "^2.8.3",
+    "jotai-zustand": "^0.4.0",
     "puppeteer": "^22.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
