--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "dev": "tsx ./server.ts",
     "discord:deploy": "tsx ./app/discord/deployCommands.ts",
     "build": "remix vite:build",
-    "start": "cross-env NODE_ENV=production tsx ./server.ts",
+    "start": "tsx ./migrateState.ts && cross-env NODE_ENV=production tsx ./server.ts",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "db:migrations": "drizzle-kit generate --dialect=sqlite --out=./app/drizzle/migrations --schema=./app/drizzle/schema.server.ts",
+    "db:backup": "flyctl ssh sftp get -a ti4-lab /data/sqlite.db ~/Downloads/ti4-lab_$(date +'%d_%m_%Y').db",
     "typecheck": "tsc"
   },
   "dependencies": {
