--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "db:migrations": "drizzle-kit generate --dialect=sqlite --out=./app/drizzle/migrations --schema=./app/drizzle/schema.server.ts",
     "db:backup": "flyctl ssh sftp get -a ti4-lab /data/sqlite.db ~/Downloads/ti4-lab_$(date +'%d_%m_%Y').db",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "test": "vitest"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
@@ -68,7 +69,8 @@
     "prettier": "^3.2.5",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.2.1"
+    "vite-tsconfig-paths": "^4.2.1",
+    "vitest": "^2.1.8"
   },
   "engines": {
     "node": ">=18.0.0"
