--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
     "@tabler/icons-react": "^3.5.0",
+    "@types/howler": "^2.2.12",
     "better-sqlite3": "^10.0.0",
     "cross-env": "^7.0.3",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.10",
+    "howler": "^2.2.4",
     "immer": "^10.1.1",
     "isbot": "^4.1.0",
     "jotai": "^2.8.3",
     "jotai-zustand": "^0.4.0",
+    "music-metadata-browser": "^2.5.11",
     "puppeteer": "^22.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
