--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading-indicators": "^0.2.3",
+    "react-qr-code": "^2.0.15",
     "react-transition-group": "^4.4.5",
     "remix-utils": "^7.6.0",
     "socket.io": "^4.7.5",
