--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "db:backup": "flyctl ssh sftp get -a ti4-lab /data/sqlite.db ~/Downloads/ti4-lab_$(date +'%d_%m_%Y').db",
     "typecheck": "tsc",
     "test": "vitest",
-    "sync-voices:wrangler": "node sync-voices-wrangler.js"
+    "sync-voices": "node sync-voices-wrangler.js"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
