--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jotai": "^2.8.3",
     "jotai-zustand": "^0.4.0",
     "music-metadata-browser": "^2.5.11",
+    "posthog-js": "^1.249.0",
     "puppeteer": "^22.10.0",
     "querystring": "^0.2.1",
     "react": "^18.2.0",
