--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
     "@tabler/icons-react": "^3.5.0",
+    "@tanstack/react-table": "^8.21.3",
     "@types/howler": "^2.2.12",
     "better-sqlite3": "^10.0.0",
     "cross-env": "^7.0.3",
