--- a/package.json
+++ b/package.json
@@ -6,25 +6,26 @@
   "scripts": {
     "dev": "tsx ./server.ts",
     "discord:deploy": "tsx ./app/discord/deployCommands.ts",
-    "build": "remix vite:build",
+    "build": "react-router build",
     "start": "cross-env NODE_ENV=production tsx ./server.ts",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "db:migrations": "drizzle-kit generate --dialect=sqlite --out=./app/drizzle/migrations --schema=./app/drizzle/schema.server.ts",
     "db:backup": "flyctl ssh sftp get -a ti4-lab /data/sqlite.db ~/Downloads/ti4-lab_$(date +'%d_%m_%Y').db",
-    "typecheck": "tsc",
+    "typecheck": "react-router typegen && tsc",
     "test": "vitest",
     "sync-voices": "node sync-voices-wrangler.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.914.0",
     "@dnd-kit/core": "^6.1.0",
-    "@mantine/core": "^7.10.1",
-    "@mantine/hooks": "^7.10.1",
-    "@mantine/notifications": "^7.12.1",
-    "@remix-run/node": "^2.9.2",
-    "@remix-run/react": "^2.9.2",
-    "@remix-run/serve": "^2.9.2",
-    "@tabler/icons-react": "^3.5.0",
+    "@mantine/core": "^8.3.10",
+    "@mantine/hooks": "^8.3.10",
+    "@mantine/notifications": "^8.3.10",
+    "@react-router/dev": "^7.11.0",
+    "@react-router/express": "^7.11.0",
+    "@react-router/fs-routes": "^7.11.0",
+    "@react-router/node": "^7.11.0",
+    "@tabler/icons-react": "^3.36.1",
     "@tanstack/react-table": "^8.21.3",
     "@types/howler": "^2.2.12",
     "better-sqlite3": "^10.0.0",
@@ -32,6 +33,7 @@
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.10",
+    "express": "^5.2.1",
     "howler": "^2.2.4",
     "immer": "^10.1.1",
     "isbot": "^4.1.0",
@@ -40,11 +42,11 @@
     "music-metadata-browser": "^2.5.11",
     "posthog-js": "^1.249.0",
     "querystring": "^0.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19",
+    "react-dom": "^19",
     "react-loading-indicators": "^0.2.3",
     "react-qr-code": "^2.0.15",
-    "react-transition-group": "^4.4.5",
+    "react-router": "^7.11.0",
     "remix-utils": "^7.6.0",
     "skia-canvas": "^3.0.8",
     "socket.io": "^4.7.5",
@@ -54,16 +56,17 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
     "@flydotio/dockerfile": "^0.5.7",
-    "@remix-run/dev": "^2.9.2",
     "@types/better-sqlite3": "^7.6.10",
     "@types/express": "^4.17.21",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-transition-group": "^4.4.10",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
+    "babel-plugin-react-compiler": "^1.0.0",
     "drizzle-kit": "^0.21.4",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -78,10 +81,11 @@
     "prettier": "^3.2.5",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
+    "vite-plugin-babel": "^1.3.2",
     "vite-tsconfig-paths": "^4.2.1",
     "vitest": "^2.1.8"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.0.0"
   }
 }
