--- a/fly.toml
+++ b/fly.toml
@@ -20,6 +20,13 @@ primary_region = 'dfw'
   min_machines_running = 0
   processes = ['app']
 
+  [[http_service.checks]]
+    interval = "10s"
+    timeout = "5s"
+    grace_period = "30s"
+    method = "GET"
+    path = "/health"
+
 [[vm]]
   memory = '2gb'
   cpu_kind = 'shared'
